# UPT

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clang-format.yml  clang-tidy.yml  cppcheck.yml  docs.yml  flawfinder.yml  multi-platform.yml  python-lint.yml  stale.yml
cmake/: ExampleProjectConfig.cmake.in  Version.h.in  clang-tidy.cmake  cmake_uninstall.cmake.in  cppcheck.cmake  cuda.cmake  version.h.in
docs/: index.md
include/ExampleProject/: Version.h
include/exampleproject/: version.h
search/: search_index.json
src/: example_cuda.cu  example_debug.cpp  example_project.cpp
test/: CMakeLists.txt  test_example.cpp
